--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Foto WEB Online :P</title>
 	<style type="text/css">
 		#slideshow {
-			margin: 80px auto;
+			margin: 40px auto;
 			position: relative;
-			width: 840px;
+			width: 640px;
 			height: 640px;
 			padding: 10px;
 			box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
@@ -18,6 +18,17 @@
 			left: 10px;
 			right: 10px;
 			bottom: 10px;
+		}
+		img{
+			width: 100%;
+		}
+		html {
+    height: 100%
+}
+		body{
+			background-image: url('./backgrounds/bg1.jpg');
+			background-repeat: no-repeat;
+   			background-size: 100% 100%;
 		}
 	</style>
 </head>
